salesforce_package/force-app/main/default/objects/Site_Verification__c/Site_Verification__c.object-meta.xml
<CustomObject>
    <label>Site Verification</label>
    <pluralLabel>Site Verifications</pluralLabel>
    <nameField>
        <label>Site Verification Number</label>
        <displayFormat>SV-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_Verifications</fullName>
        <columns>NAME</columns>
        <columns>Work_Ref__c</columns>
        <columns>Outcome__c</columns>
        <columns>Recorded_By__c</columns>
        <columns>Recorded_On__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Site Verifications</label>
    </listViews>
    <listViews>
        <fullName>Camera_Raised_A_Question</fullName>
        <columns>NAME</columns>
        <columns>Work_Ref__c</columns>
        <columns>Board_Reference__c</columns>
        <columns>OCR_Confidence__c</columns>
        <columns>Photo_Reuse_Count__c</columns>
        <columns>Reused_From__c</columns>
        <columns>Recorded_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Board_Disagrees__c</field>
            <operation>equals</operation>
            <!-- Salesforce list-view filters take 1/0 for a checkbox, not true/false. -->
            <value>1</value>
        </filters>
        <label>Camera Raised A Question</label>
    </listViews>
</CustomObject>