salesforce_package/force-app/main/default/objects/Site_Verification__c/fields/Board_Amount__c.field-meta.xml
<CustomField>
    <fullName>Board_Amount__c</fullName>
    <label>Board Amount Read</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>