salesforce_package/force-app/main/default/objects/Site_Verification__c/fields/Board_Disagrees__c.field-meta.xml
<CustomField>
    <fullName>Board_Disagrees__c</fullName>
    <label>Board Disagrees With Record</label>
    <type>Checkbox</type>
    <formula>AND(NOT(ISBLANK(Board_Reference__c)), Board_Reference__c &lt;&gt; Work_Ref__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>