salesforce_package/force-app/main/default/objects/Site_Verification__c/fields/Board_Reference__c.field-meta.xml
<CustomField>
    <fullName>Board_Reference__c</fullName>
    <label>Board Reference Read</label>
    <type>Text</type>
    <length>40</length>
</CustomField>