salesforce_package/force-app/main/default/objects/Site_Verification__c/fields/Demo__c.field-meta.xml
<CustomField>
    <fullName>Demo__c</fullName>
    <label>Demonstration Record</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>