salesforce_package/force-app/main/default/objects/Site_Verification__c/fields/Investigation_Case__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Case__c</fullName>
    <label>Investigation Case</label>
    <type>Lookup</type>
    <referenceTo>Investigation_Case__c</referenceTo>
    <relationshipName>Site_Verifications</relationshipName>
    <relationshipLabel>Site Verifications</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>