salesforce_package/force-app/main/default/objects/Site_Verification__c/fields/Needed_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Needed_Confirmation__c</fullName>
    <label>Machine Refused To Settle</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>