salesforce_package/force-app/main/default/objects/Site_Verification__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Officer Notes</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>