salesforce_package/force-app/main/default/objects/Site_Verification__c/fields/OCR_Confidence__c.field-meta.xml
<CustomField>
    <fullName>OCR_Confidence__c</fullName>
    <label>OCR Character Confidence</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>