salesforce_package/force-app/main/default/objects/Site_Verification__c/fields/OCR_Text__c.field-meta.xml
<CustomField>
    <fullName>OCR_Text__c</fullName>
    <label>Board Text</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>