salesforce_package/force-app/main/default/objects/Site_Verification__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>VERIFIED_COMPLETE</fullName>
                </value>
                <value>
                    <fullName>VERIFIED_IN_PROGRESS</fullName>
                </value>
                <value>
                    <fullName>NOT_STARTED</fullName>
                </value>
                <value>
                    <fullName>NOT_FOUND</fullName>
                </value>
                <value>
                    <fullName>RECORD_MISMATCH</fullName>
                </value>
                <value>
                    <fullName>NO_ACCESS</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>