salesforce_package/force-app/main/default/objects/Site_Verification__c/fields/Photo_Reuse_Count__c.field-meta.xml
<CustomField>
    <fullName>Photo_Reuse_Count__c</fullName>
    <label>Photograph Seen Before</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>