salesforce_package/force-app/main/default/objects/Site_Verification__c/fields/Recorded_By__c.field-meta.xml
<CustomField>
    <fullName>Recorded_By__c</fullName>
    <label>Recorded By</label>
    <type>Text</type>
    <length>120</length>
</CustomField>