salesforce_package/force-app/main/default/objects/Site_Verification__c/fields/Recorded_On__c.field-meta.xml
<CustomField>
    <fullName>Recorded_On__c</fullName>
    <label>Recorded On</label>
    <type>Date</type>
</CustomField>