salesforce_package/force-app/main/default/objects/Site_Verification__c/fields/Reused_From__c.field-meta.xml
<CustomField>
    <fullName>Reused_From__c</fullName>
    <label>Photograph First Used On</label>
    <type>Text</type>
    <length>40</length>
</CustomField>