salesforce_package/force-app/main/default/objects/Site_Verification__c/fields/Row_Hash__c.field-meta.xml
<CustomField>
    <fullName>Row_Hash__c</fullName>
    <label>Immutable Record Hash</label>
    <type>Text</type>
    <required>true</required>
    <externalId>true</externalId>
    <unique>true</unique>
    <length>64</length>
</CustomField>